logs/conifertools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/conifertools'...
Compiling './lib/python3.5/site-packages/conifertools/call.mpi.py'...
***   File "./lib/python3.5/site-packages/conifertools/call.mpi.py", line 30
    print "[STATUS] now running %s:chr%s" % (x["sample"], x["chrom"])
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/conifertools/conifertools.py'...
***   File "./lib/python3.5/site-packages/conifertools/conifertools.py", line 11
    print "Import Error: Could not import rpy2 and/or CGHcall. Installed?"
                                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/conifertools/mpi_submit.py'...
***   File "./lib/python3.5/site-packages/conifertools/mpi_submit.py", line 83
    except drmaa.errors.DeniedByDrmException, e:
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/conifertools/mpi_wrapper.py'...
***   File "./lib/python3.5/site-packages/conifertools/mpi_wrapper.py", line 18
    print "master sending START to ", str(i)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/conifertools/plotting.py'...
***   File "./lib/python3.5/site-packages/conifertools/plotting.py", line 89
    print "Indicate either calltable or bedfile for type!"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/conifertools/rpkm.py'...
***   File "./lib/python3.5/site-packages/conifertools/rpkm.py", line 16
    print "Warning: the data in this rpkm_data container are single genotype values. Smoothing will have no effect!"
                                                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/conifertools-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
